<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="262dp"
        android:layout_height="316dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/second_button"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/second_button_text" />

        <Button
            android:id="@+id/photo_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/photo_button_text" />

        <Button
            android:id="@+id/display_photo"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:text="@string/photo_display_text"
            android:onClick="displayPhoto"/>

        <TextView
            android:id="@+id/second_textView"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:text="@string/second_label"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>