<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_secondary_variant"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="237dp"
        android:layout_height="338dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/main_button"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:onClick="sendMessage"
            android:text="@string/main_button_text" />

        <EditText
            android:id="@+id/main_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/edit_text_string" />

        <TextView
            android:id="@+id/main_textView"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/main_label" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:text="@string/drawing"
            android:onClick="goDrawing"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>